--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn {
+        @apply text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800 transition-colors duration-300 disabled:cursor-not-allowed disabled:opacity-50;
+    }
+
+    .btn-outlined {
+        @apply border border-green-700 bg-white text-green-700 hover:bg-green-800 hover:text-white focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:text-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800 transition-colors duration-300 disabled:cursor-not-allowed disabled:opacity-50;
+    }
+}
