--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,3 +11,16 @@
         @apply border border-green-700 bg-white text-green-700 hover:bg-green-800 hover:text-white focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:text-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800 transition-colors duration-300 disabled:cursor-not-allowed disabled:opacity-50;
     }
 }
+
+.ReactModal__Overlay {
+    opacity: 0;
+    transition: opacity 300ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open {
+    opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+    opacity: 0;
+}
